My Language/TParser.java
// $ANTLR 3.5.2 T.g 2021-04-10 22:48:26

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

@SuppressWarnings("all")
public class TParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENTS", "ID", "INT", "WS", 
		"'\"'", "'('", "')'", "'+'", "','", "':'", "'='", "'['", "']'", "'print('"
	};
	public static final int EOF=-1;
	public static final int T__8=8;
	public static final int T__9=9;
	public static final int T__10=10;
	public static final int T__11=11;
	public static final int T__12=12;
	public static final int T__13=13;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int COMMENTS=4;
	public static final int ID=5;
	public static final int INT=6;
	public static final int WS=7;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public TParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public TParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return TParser.tokenNames; }
	@Override public String getGrammarFileName() { return "T.g"; }

	 	PythonThing PT = new PythonThing();


	// $ANTLR start "prog"
	// T.g:16:1: prog : ( stat )+ ;
	public final void prog() throws RecognitionException {
		try {
			// T.g:16:5: ( ( stat )+ )
			// T.g:16:25: ( stat )+
			{
			// T.g:16:25: ( stat )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==ID||LA1_0==9||LA1_0==17) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// T.g:16:26: stat
					{
					pushFollow(FOLLOW_stat_in_prog514);
					stat();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					if (state.backtracking>0) {state.failed=true; return;}
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "prog"



	// $ANTLR start "stat"
	// T.g:19:1: stat : ( assignment | ( print )+ | tuple_unpack );
	public final void stat() throws RecognitionException {
		try {
			// T.g:19:5: ( assignment | ( print )+ | tuple_unpack )
			int alt3=3;
			switch ( input.LA(1) ) {
			case ID:
				{
				alt3=1;
				}
				break;
			case 17:
				{
				alt3=2;
				}
				break;
			case 9:
				{
				alt3=3;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return;}
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}
			switch (alt3) {
				case 1 :
					// T.g:19:25: assignment
					{
					pushFollow(FOLLOW_assignment_in_stat554);
					assignment();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 2 :
					// T.g:19:38: ( print )+
					{
					// T.g:19:38: ( print )+
					int cnt2=0;
					loop2:
					while (true) {
						int alt2=2;
						int LA2_0 = input.LA(1);
						if ( (LA2_0==17) ) {
							int LA2_2 = input.LA(2);
							if ( (synpred3_T()) ) {
								alt2=1;
							}

						}

						switch (alt2) {
						case 1 :
							// T.g:19:39: print
							{
							pushFollow(FOLLOW_print_in_stat559);
							print();
							state._fsp--;
							if (state.failed) return;
							}
							break;

						default :
							if ( cnt2 >= 1 ) break loop2;
							if (state.backtracking>0) {state.failed=true; return;}
							EarlyExitException eee = new EarlyExitException(2, input);
							throw eee;
						}
						cnt2++;
					}

					}
					break;
				case 3 :
					// T.g:19:49: tuple_unpack
					{
					pushFollow(FOLLOW_tuple_unpack_in_stat565);
					tuple_unpack();
					state._fsp--;
					if (state.failed) return;
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "stat"



	// $ANTLR start "assignment"
	// T.g:22:1: assignment : (x= ID '=' int1= INT ( '+' int2= INT )* |y= ID '=' s1= string ( '+' s2= string )* |i0= ID '[' i1= INT ']' '=' (e2= expression |t= tuple[$e2.text] ) |i1= ID f= '=' (i2= ID ( '+' i3= ID )* |i4= ID '[' (start= INT )? ':' (stop= INT )? ']' | tuple[$i1.text] ( '+' tuple[$f.text] )* ) |i1= ID '=' e1= expression ( '+' e2= expression )* );
	public final void assignment() throws RecognitionException {
		Token x=null;
		Token int1=null;
		Token int2=null;
		Token y=null;
		Token i0=null;
		Token i1=null;
		Token f=null;
		Token i2=null;
		Token i3=null;
		Token i4=null;
		Token start=null;
		Token stop=null;
		ParserRuleReturnScope s1 =null;
		ParserRuleReturnScope s2 =null;
		ParserRuleReturnScope e2 =null;
		ParserRuleReturnScope e1 =null;

		try {
			// T.g:22:11: (x= ID '=' int1= INT ( '+' int2= INT )* |y= ID '=' s1= string ( '+' s2= string )* |i0= ID '[' i1= INT ']' '=' (e2= expression |t= tuple[$e2.text] ) |i1= ID f= '=' (i2= ID ( '+' i3= ID )* |i4= ID '[' (start= INT )? ':' (stop= INT )? ']' | tuple[$i1.text] ( '+' tuple[$f.text] )* ) |i1= ID '=' e1= expression ( '+' e2= expression )* )
			int alt13=5;
			int LA13_0 = input.LA(1);
			if ( (LA13_0==ID) ) {
				int LA13_1 = input.LA(2);
				if ( (synpred6_T()) ) {
					alt13=1;
				}
				else if ( (synpred8_T()) ) {
					alt13=2;
				}
				else if ( (synpred10_T()) ) {
					alt13=3;
				}
				else if ( (synpred17_T()) ) {
					alt13=4;
				}
				else if ( (true) ) {
					alt13=5;
				}

			}

			else {
				if (state.backtracking>0) {state.failed=true; return;}
				NoViableAltException nvae =
					new NoViableAltException("", 13, 0, input);
				throw nvae;
			}

			switch (alt13) {
				case 1 :
					// T.g:22:25: x= ID '=' int1= INT ( '+' int2= INT )*
					{
					x=(Token)match(input,ID,FOLLOW_ID_in_assignment613); if (state.failed) return;
					match(input,14,FOLLOW_14_in_assignment615); if (state.failed) return;
					int1=(Token)match(input,INT,FOLLOW_INT_in_assignment621); if (state.failed) return;
					if ( state.backtracking==0 ) {PT.assign((x!=null?x.getText():null), Integer.parseInt((int1!=null?int1.getText():null)));}
					// T.g:23:25: ( '+' int2= INT )*
					loop4:
					while (true) {
						int alt4=2;
						int LA4_0 = input.LA(1);
						if ( (LA4_0==11) ) {
							alt4=1;
						}

						switch (alt4) {
						case 1 :
							// T.g:23:26: '+' int2= INT
							{
							match(input,11,FOLLOW_11_in_assignment676); if (state.failed) return;
							int2=(Token)match(input,INT,FOLLOW_INT_in_assignment682); if (state.failed) return;
							if ( state.backtracking==0 ) {PT.addINT((x!=null?x.getText():null), Integer.parseInt((int2!=null?int2.getText():null)));}
							}
							break;

						default :
							break loop4;
						}
					}

					}
					break;
				case 2 :
					// T.g:26:25: y= ID '=' s1= string ( '+' s2= string )*
					{
					y=(Token)match(input,ID,FOLLOW_ID_in_assignment800); if (state.failed) return;
					match(input,14,FOLLOW_14_in_assignment802); if (state.failed) return;
					pushFollow(FOLLOW_string_in_assignment808);
					s1=string();
					state._fsp--;
					if (state.failed) return;
					if ( state.backtracking==0 ) {PT.assign((y!=null?y.getText():null), (s1!=null?input.toString(s1.start,s1.stop):null).substring(1, (s1!=null?input.toString(s1.start,s1.stop):null).length()-1));}
					// T.g:27:25: ( '+' s2= string )*
					loop5:
					while (true) {
						int alt5=2;
						int LA5_0 = input.LA(1);
						if ( (LA5_0==11) ) {
							alt5=1;
						}

						switch (alt5) {
						case 1 :
							// T.g:27:26: '+' s2= string
							{
							match(input,11,FOLLOW_11_in_assignment862); if (state.failed) return;
							pushFollow(FOLLOW_string_in_assignment868);
							s2=string();
							state._fsp--;
							if (state.failed) return;
							if ( state.backtracking==0 ) {PT.strConcat((y!=null?y.getText():null), (s2!=null?input.toString(s2.start,s2.stop):null).substring(1, (s2!=null?input.toString(s2.start,s2.stop):null).length()-1));
							                                                                        PT.strConcat((y!=null?y.getText():null), "\"");}
							}
							break;

						default :
							break loop5;
						}
					}

					}
					break;
				case 3 :
					// T.g:31:25: i0= ID '[' i1= INT ']' '=' (e2= expression |t= tuple[$e2.text] )
					{
					i0=(Token)match(input,ID,FOLLOW_ID_in_assignment984); if (state.failed) return;
					match(input,15,FOLLOW_15_in_assignment986); if (state.failed) return;
					i1=(Token)match(input,INT,FOLLOW_INT_in_assignment992); if (state.failed) return;
					match(input,16,FOLLOW_16_in_assignment994); if (state.failed) return;
					match(input,14,FOLLOW_14_in_assignment996); if (state.failed) return;
					// T.g:32:25: (e2= expression |t= tuple[$e2.text] )
					int alt6=2;
					int LA6_0 = input.LA(1);
					if ( (LA6_0==EOF||(LA6_0 >= ID && LA6_0 <= INT)||LA6_0==8||LA6_0==17) ) {
						alt6=1;
					}
					else if ( (LA6_0==9) ) {
						int LA6_6 = input.LA(2);
						if ( (synpred9_T()) ) {
							alt6=1;
						}
						else if ( (true) ) {
							alt6=2;
						}

					}

					else {
						if (state.backtracking>0) {state.failed=true; return;}
						NoViableAltException nvae =
							new NoViableAltException("", 6, 0, input);
						throw nvae;
					}

					switch (alt6) {
						case 1 :
							// T.g:32:26: e2= expression
							{
							pushFollow(FOLLOW_expression_in_assignment1027);
							e2=expression();
							state._fsp--;
							if (state.failed) return;
							if ( state.backtracking==0 ) {PT.tupleUpdate((i0!=null?i0.getText():null), Integer.parseInt((i1!=null?i1.getText():null)), (e2!=null?((TParser.expression_return)e2).exp_val:null));}
							}
							break;
						case 2 :
							// T.g:34:25: t= tuple[$e2.text]
							{
							pushFollow(FOLLOW_tuple_in_assignment1117);
							tuple((e2!=null?input.toString(e2.start,e2.stop):null));
							state._fsp--;
							if (state.failed) return;
							if ( state.backtracking==0 ) {PT.tuplePush((i0!=null?i0.getText():null), Integer.parseInt((i1!=null?i1.getText():null)), (e2!=null?input.toString(e2.start,e2.stop):null));}
							}
							break;

					}

					}
					break;
				case 4 :
					// T.g:37:25: i1= ID f= '=' (i2= ID ( '+' i3= ID )* |i4= ID '[' (start= INT )? ':' (stop= INT )? ']' | tuple[$i1.text] ( '+' tuple[$f.text] )* )
					{
					i1=(Token)match(input,ID,FOLLOW_ID_in_assignment1212); if (state.failed) return;
					f=(Token)match(input,14,FOLLOW_14_in_assignment1218); if (state.failed) return;
					if ( state.backtracking==0 ) {PT.assignTuple((i1!=null?i1.getText():null));}
					// T.g:38:25: (i2= ID ( '+' i3= ID )* |i4= ID '[' (start= INT )? ':' (stop= INT )? ']' | tuple[$i1.text] ( '+' tuple[$f.text] )* )
					int alt11=3;
					int LA11_0 = input.LA(1);
					if ( (LA11_0==ID) ) {
						int LA11_1 = input.LA(2);
						if ( (LA11_1==15) ) {
							alt11=2;
						}
						else if ( (LA11_1==EOF||LA11_1==ID||LA11_1==9||LA11_1==11||LA11_1==17) ) {
							alt11=1;
						}

						else {
							if (state.backtracking>0) {state.failed=true; return;}
							int nvaeMark = input.mark();
							try {
								input.consume();
								NoViableAltException nvae =
									new NoViableAltException("", 11, 1, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}
					else if ( (LA11_0==9) ) {
						alt11=3;
					}

					else {
						if (state.backtracking>0) {state.failed=true; return;}
						NoViableAltException nvae =
							new NoViableAltException("", 11, 0, input);
						throw nvae;
					}

					switch (alt11) {
						case 1 :
							// T.g:38:27: i2= ID ( '+' i3= ID )*
							{
							i2=(Token)match(input,ID,FOLLOW_ID_in_assignment1284); if (state.failed) return;
							if ( state.backtracking==0 ) {PT.tupleConcat((i1!=null?i1.getText():null), (i2!=null?i2.getText():null));}
							// T.g:39:25: ( '+' i3= ID )*
							loop7:
							while (true) {
								int alt7=2;
								int LA7_0 = input.LA(1);
								if ( (LA7_0==11) ) {
									alt7=1;
								}

								switch (alt7) {
								case 1 :
									// T.g:39:26: '+' i3= ID
									{
									match(input,11,FOLLOW_11_in_assignment1351); if (state.failed) return;
									i3=(Token)match(input,ID,FOLLOW_ID_in_assignment1357); if (state.failed) return;
									if ( state.backtracking==0 ) {PT.tupleConcat((i1!=null?i1.getText():null), (i3!=null?i3.getText():null));}
									}
									break;

								default :
									break loop7;
								}
							}

							}
							break;
						case 2 :
							// T.g:42:25: i4= ID '[' (start= INT )? ':' (stop= INT )? ']'
							{
							i4=(Token)match(input,ID,FOLLOW_ID_in_assignment1501); if (state.failed) return;
							match(input,15,FOLLOW_15_in_assignment1503); if (state.failed) return;
							// T.g:42:37: (start= INT )?
							int alt8=2;
							int LA8_0 = input.LA(1);
							if ( (LA8_0==INT) ) {
								alt8=1;
							}
							switch (alt8) {
								case 1 :
									// T.g:42:38: start= INT
									{
									start=(Token)match(input,INT,FOLLOW_INT_in_assignment1508); if (state.failed) return;
									}
									break;

							}

							match(input,13,FOLLOW_13_in_assignment1512); if (state.failed) return;
							// T.g:42:54: (stop= INT )?
							int alt9=2;
							int LA9_0 = input.LA(1);
							if ( (LA9_0==INT) ) {
								alt9=1;
							}
							switch (alt9) {
								case 1 :
									// T.g:42:55: stop= INT
									{
									stop=(Token)match(input,INT,FOLLOW_INT_in_assignment1517); if (state.failed) return;
									}
									break;

							}

							match(input,16,FOLLOW_16_in_assignment1521); if (state.failed) return;
							if ( state.backtracking==0 ) {PT.tupleSliceAssign((i1!=null?i1.getText():null), (i4!=null?i4.getText():null), (start!=null?start.getText():null), (stop!=null?stop.getText():null));}
							}
							break;
						case 3 :
							// T.g:43:27: tuple[$i1.text] ( '+' tuple[$f.text] )*
							{
							pushFollow(FOLLOW_tuple_in_assignment1554);
							tuple((i1!=null?i1.getText():null));
							state._fsp--;
							if (state.failed) return;
							// T.g:44:25: ( '+' tuple[$f.text] )*
							loop10:
							while (true) {
								int alt10=2;
								int LA10_0 = input.LA(1);
								if ( (LA10_0==11) ) {
									alt10=1;
								}

								switch (alt10) {
								case 1 :
									// T.g:44:27: '+' tuple[$f.text]
									{
									match(input,11,FOLLOW_11_in_assignment1584); if (state.failed) return;
									pushFollow(FOLLOW_tuple_in_assignment1586);
									tuple((f!=null?f.getText():null));
									state._fsp--;
									if (state.failed) return;
									if ( state.backtracking==0 ) {PT.tupleConcat((i1!=null?i1.getText():null), (f!=null?f.getText():null));}
									}
									break;

								default :
									break loop10;
								}
							}

							}
							break;

					}

					}
					break;
				case 5 :
					// T.g:48:25: i1= ID '=' e1= expression ( '+' e2= expression )*
					{
					i1=(Token)match(input,ID,FOLLOW_ID_in_assignment1707); if (state.failed) return;
					match(input,14,FOLLOW_14_in_assignment1709); if (state.failed) return;
					pushFollow(FOLLOW_expression_in_assignment1715);
					e1=expression();
					state._fsp--;
					if (state.failed) return;
					if ( state.backtracking==0 ) {PT.assign((i1!=null?i1.getText():null), (e1!=null?((TParser.expression_return)e1).exp_val:null));}
					// T.g:49:25: ( '+' e2= expression )*
					loop12:
					while (true) {
						int alt12=2;
						int LA12_0 = input.LA(1);
						if ( (LA12_0==11) ) {
							alt12=1;
						}

						switch (alt12) {
						case 1 :
							// T.g:49:27: '+' e2= expression
							{
							match(input,11,FOLLOW_11_in_assignment1765); if (state.failed) return;
							pushFollow(FOLLOW_expression_in_assignment1771);
							e2=expression();
							state._fsp--;
							if (state.failed) return;
							if ( state.backtracking==0 ) {PT.add((i1!=null?i1.getText():null), (e2!=null?((TParser.expression_return)e2).exp_val:null));}
							}
							break;

						default :
							break loop12;
						}
					}

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "assignment"


	public static class expression_return extends ParserRuleReturnScope {
		public Object exp_val;
	};


	// $ANTLR start "expression"
	// T.g:53:1: expression returns [Object exp_val] : ( INT | string |f= ID |i= ID '[' n= expression ']' |h= ID '[' a= expression ':' b= expression ']' |);
	public final TParser.expression_return expression() throws RecognitionException {
		TParser.expression_return retval = new TParser.expression_return();
		retval.start = input.LT(1);

		Token f=null;
		Token i=null;
		Token h=null;
		Token INT1=null;
		ParserRuleReturnScope n =null;
		ParserRuleReturnScope a =null;
		ParserRuleReturnScope b =null;
		ParserRuleReturnScope string2 =null;

		try {
			// T.g:55:17: ( INT | string |f= ID |i= ID '[' n= expression ']' |h= ID '[' a= expression ':' b= expression ']' |)
			int alt14=6;
			switch ( input.LA(1) ) {
			case INT:
				{
				alt14=1;
				}
				break;
			case 8:
				{
				alt14=2;
				}
				break;
			case ID:
				{
				int LA14_3 = input.LA(2);
				if ( (synpred21_T()) ) {
					alt14=3;
				}
				else if ( (synpred22_T()) ) {
					alt14=4;
				}
				else if ( (synpred23_T()) ) {
					alt14=5;
				}
				else if ( (true) ) {
					alt14=6;
				}

				}
				break;
			case EOF:
			case 9:
			case 10:
			case 11:
			case 12:
			case 13:
			case 16:
			case 17:
				{
				alt14=6;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 14, 0, input);
				throw nvae;
			}
			switch (alt14) {
				case 1 :
					// T.g:55:25: INT
					{
					INT1=(Token)match(input,INT,FOLLOW_INT_in_expression1868); if (state.failed) return retval;
					if ( state.backtracking==0 ) {retval.exp_val = Integer.parseInt((INT1!=null?INT1.getText():null));}
					}
					break;
				case 2 :
					// T.g:56:14: string
					{
					pushFollow(FOLLOW_string_in_expression1898);
					string2=string();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) {retval.exp_val = (string2!=null?input.toString(string2.start,string2.stop):null).substring(1,(string2!=null?input.toString(string2.start,string2.stop):null).length()-1);}
					}
					break;
				case 3 :
					// T.g:57:13: f= ID
					{
					f=(Token)match(input,ID,FOLLOW_ID_in_expression1930); if (state.failed) return retval;
					if ( state.backtracking==0 ) {retval.exp_val = PT.getValue((f!=null?f.getText():null));}
					}
					break;
				case 4 :
					// T.g:58:27: i= ID '[' n= expression ']'
					{
					i=(Token)match(input,ID,FOLLOW_ID_in_expression1982); if (state.failed) return retval;
					match(input,15,FOLLOW_15_in_expression1984); if (state.failed) return retval;
					pushFollow(FOLLOW_expression_in_expression1990);
					n=expression();
					state._fsp--;
					if (state.failed) return retval;
					match(input,16,FOLLOW_16_in_expression1992); if (state.failed) return retval;
					if ( state.backtracking==0 ) {retval.exp_val = PT.indexing((i!=null?i.getText():null), (n!=null?((TParser.expression_return)n).exp_val:null));}
					}
					break;
				case 5 :
					// T.g:59:27: h= ID '[' a= expression ':' b= expression ']'
					{
					h=(Token)match(input,ID,FOLLOW_ID_in_expression2040); if (state.failed) return retval;
					match(input,15,FOLLOW_15_in_expression2042); if (state.failed) return retval;
					pushFollow(FOLLOW_expression_in_expression2048);
					a=expression();
					state._fsp--;
					if (state.failed) return retval;
					match(input,13,FOLLOW_13_in_expression2050); if (state.failed) return retval;
					pushFollow(FOLLOW_expression_in_expression2056);
					b=expression();
					state._fsp--;
					if (state.failed) return retval;
					match(input,16,FOLLOW_16_in_expression2058); if (state.failed) return retval;
					if ( state.backtracking==0 ) {retval.exp_val = PT.tupleSlice((h!=null?h.getText():null), (a!=null?((TParser.expression_return)a).exp_val:null), (b!=null?((TParser.expression_return)b).exp_val:null));}
					}
					break;
				case 6 :
					// T.g:61:18: 
					{
					}
					break;

			}
			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "expression"



	// $ANTLR start "tuple"
	// T.g:63:1: tuple[String id_tuple] : '(' tuple_tail[id_tuple] ')' ;
	public final void tuple(String id_tuple) throws RecognitionException {
		try {
			// T.g:64:18: ( '(' tuple_tail[id_tuple] ')' )
			// T.g:64:25: '(' tuple_tail[id_tuple] ')'
			{
			match(input,9,FOLLOW_9_in_tuple2118); if (state.failed) return;
			pushFollow(FOLLOW_tuple_tail_in_tuple2120);
			tuple_tail(id_tuple);
			state._fsp--;
			if (state.failed) return;
			match(input,10,FOLLOW_10_in_tuple2124); if (state.failed) return;
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "tuple"



	// $ANTLR start "tuple_tail"
	// T.g:67:1: tuple_tail[String id_tuple_tail] : ( (e1= expression ( ',' e2= expression )* ) |);
	public final void tuple_tail(String id_tuple_tail) throws RecognitionException {
		ParserRuleReturnScope e1 =null;
		ParserRuleReturnScope e2 =null;

		try {
			// T.g:67:34: ( (e1= expression ( ',' e2= expression )* ) |)
			int alt16=2;
			int LA16_0 = input.LA(1);
			if ( ((LA16_0 >= ID && LA16_0 <= INT)||LA16_0==8||LA16_0==12) ) {
				alt16=1;
			}
			else if ( (LA16_0==10) ) {
				int LA16_2 = input.LA(2);
				if ( (synpred25_T()) ) {
					alt16=1;
				}
				else if ( (true) ) {
					alt16=2;
				}

			}

			else {
				if (state.backtracking>0) {state.failed=true; return;}
				NoViableAltException nvae =
					new NoViableAltException("", 16, 0, input);
				throw nvae;
			}

			switch (alt16) {
				case 1 :
					// T.g:68:25: (e1= expression ( ',' e2= expression )* )
					{
					// T.g:68:25: (e1= expression ( ',' e2= expression )* )
					// T.g:68:26: e1= expression ( ',' e2= expression )*
					{
					pushFollow(FOLLOW_expression_in_tuple_tail2187);
					e1=expression();
					state._fsp--;
					if (state.failed) return;
					if ( state.backtracking==0 ) {PT.tupleCreate(id_tuple_tail, (e1!=null?((TParser.expression_return)e1).exp_val:null));}
					// T.g:69:25: ( ',' e2= expression )*
					loop15:
					while (true) {
						int alt15=2;
						int LA15_0 = input.LA(1);
						if ( (LA15_0==12) ) {
							alt15=1;
						}

						switch (alt15) {
						case 1 :
							// T.g:69:27: ',' e2= expression
							{
							match(input,12,FOLLOW_12_in_tuple_tail2240); if (state.failed) return;
							pushFollow(FOLLOW_expression_in_tuple_tail2246);
							e2=expression();
							state._fsp--;
							if (state.failed) return;
							if ( state.backtracking==0 ) {PT.tupleCreate(id_tuple_tail, (e2!=null?((TParser.expression_return)e2).exp_val:null));}
							}
							break;

						default :
							break loop15;
						}
					}

					}

					}
					break;
				case 2 :
					// T.g:72:25: 
					{
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "tuple_tail"


	public static class string_return extends ParserRuleReturnScope {
	};


	// $ANTLR start "string"
	// T.g:74:1: string : ( '\"' (~ ( '\"' ) )* '\"' ) ;
	public final TParser.string_return string() throws RecognitionException {
		TParser.string_return retval = new TParser.string_return();
		retval.start = input.LT(1);

		try {
			// T.g:74:7: ( ( '\"' (~ ( '\"' ) )* '\"' ) )
			// T.g:74:11: ( '\"' (~ ( '\"' ) )* '\"' )
			{
			// T.g:74:11: ( '\"' (~ ( '\"' ) )* '\"' )
			// T.g:74:12: '\"' (~ ( '\"' ) )* '\"'
			{
			match(input,8,FOLLOW_8_in_string2355); if (state.failed) return retval;
			// T.g:74:16: (~ ( '\"' ) )*
			loop17:
			while (true) {
				int alt17=2;
				int LA17_0 = input.LA(1);
				if ( ((LA17_0 >= COMMENTS && LA17_0 <= WS)||(LA17_0 >= 9 && LA17_0 <= 17)) ) {
					alt17=1;
				}

				switch (alt17) {
				case 1 :
					// T.g:
					{
					if ( (input.LA(1) >= COMMENTS && input.LA(1) <= WS)||(input.LA(1) >= 9 && input.LA(1) <= 17) ) {
						input.consume();
						state.errorRecovery=false;
						state.failed=false;
					}
					else {
						if (state.backtracking>0) {state.failed=true; return retval;}
						MismatchedSetException mse = new MismatchedSetException(null,input);
						throw mse;
					}
					}
					break;

				default :
					break loop17;
				}
			}

			match(input,8,FOLLOW_8_in_string2365); if (state.failed) return retval;
			}

			}

			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "string"



	// $ANTLR start "tuple_unpack"
	// T.g:77:1: tuple_unpack : '(' e1= expression ( ',' e2= expression )* ')' '=' i1= ID ;
	public final void tuple_unpack() throws RecognitionException {
		Token i1=null;
		ParserRuleReturnScope e1 =null;
		ParserRuleReturnScope e2 =null;

		try {
			// T.g:77:13: ( '(' e1= expression ( ',' e2= expression )* ')' '=' i1= ID )
			// T.g:77:17: '(' e1= expression ( ',' e2= expression )* ')' '=' i1= ID
			{
			match(input,9,FOLLOW_9_in_tuple_unpack2416); if (state.failed) return;
			pushFollow(FOLLOW_expression_in_tuple_unpack2422);
			e1=expression();
			state._fsp--;
			if (state.failed) return;
			if ( state.backtracking==0 ) {PT.unpackSet((e1!=null?((TParser.expression_return)e1).exp_val:null));}
			// T.g:78:17: ( ',' e2= expression )*
			loop18:
			while (true) {
				int alt18=2;
				int LA18_0 = input.LA(1);
				if ( (LA18_0==12) ) {
					alt18=1;
				}

				switch (alt18) {
				case 1 :
					// T.g:78:19: ',' e2= expression
					{
					match(input,12,FOLLOW_12_in_tuple_unpack2472); if (state.failed) return;
					pushFollow(FOLLOW_expression_in_tuple_unpack2478);
					e2=expression();
					state._fsp--;
					if (state.failed) return;
					if ( state.backtracking==0 ) {PT.unpackSet((e2!=null?((TParser.expression_return)e2).exp_val:null));}
					}
					break;

